LGTM/Grafana/observability-prod-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: EXTERNAL_IP
    networking.gke.io/v1beta1.FrontendConfig: FRONTENDCONFIG_NAME
    ingress.gcp.kubernetes.io/pre-shared-cert: "SELF_SIGNED_CERT"
  labels:
    env: prod
    platform: ct
    region: asia-northeast3
    service: grafana    
  name: elb-mkt-prod-wish-grafana
  namespace: grafana-system
spec:
  rules:
  - host: grafana.wemakeprice.cloud
    http:
      paths:
      - backend:
          service:
            name: grafana-server
            port:
              number: 3000
        path: "/"
        #pathType: ImplementationSpecific
        pathType: Prefix
